<resources>
    <string name="app_name">AuthNavigation</string>

    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="welcome">Welcome!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="name">Name</string>
</resources>
