<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/fragment_login_cl_header"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:background="@drawable/gradient_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="44sp"
            app:layout_constraintBottom_toTopOf="@+id/cv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="12dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/login"
                    android:textSize="32sp"
                    android:layout_marginTop="54dp"
                    android:textColor="@color/secondary_text"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/fragment_login_et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="180dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/username"
                    android:padding="12dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/fragment_login_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/password"
                    android:padding="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_login_et_username" />

                <TextView
                    android:id="@+id/fragment_login_tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/secondary_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_login_et_password" />

                <Button
                    android:id="@+id/fragment_login_btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/button_fill"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>